# SecretHitlerSimulator

./: LICENSE  README.md  pyproject.toml
scripts/: 5naiveLiberals4AggroFascists.py  9naiveLiberals.py  evaluateLiberalPlayer.py
secret_hitler_simulator/: constants.py  errors.py  evaluate.py  game.py  player.py
secret_hitler_simulator/players/: aggroFascist.py  naiveLiberal.py
